<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/titleFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/addActivityFragment"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/addActivity" />
    <item
        android:id="@+id/journalFragment"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/journal" />
    <item
        android:id="@+id/bmiFragment"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/bmi" />
    <item
        android:id="@+id/finalProjectDemoFragment"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/projectDemo" />
    <item
        android:id="@+id/stepsCounterDemoFragment"
        android:icon="@drawable/ic_baseline_play_circle_outline_24"
        android:title="@string/stepsDemo" />
</menu>